--- a/apps/showcase/index.html
+++ b/apps/showcase/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-react-tailwind-starter</title>
+    <title>Tailwind plugin palette</title>
+    <meta content="tailwind plugin palette" name="description" />
+    <meta content="yes" name="apple-mobile-web-app-capable" />
+    <meta content="default" name="apple-mobile-web-app-status-bar-style" />
   </head>
   <body>
     <div id="root"></div>
